--- a/portfolio/src/components/Portfolio/style.css
+++ b/portfolio/src/components/Portfolio/style.css
@@ -1,7 +1,24 @@
-/* .heroBody {
+
+ol,
+ul {
+  list-style: none;
+}
+
+
+/* .border{
     background-image: url("./assets/black-wood.jpg");
     background-position: center;
     background-size: cover;
-  
     box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.541);
   } */
+
+
+  .gridbox{
+    min-height: 400px;
+    }
+
+.wrapper{
+
+  background-size: contain;
+  background-position: center;
+}
